parser/parser.output
Terminals unused in grammar

    "puti"
    "putb"
    "putc"
    "puts"
    "geti"
    "getb"
    "getc"
    "gets"
    "abs"
    "ord"
    "chr"
    "strlen"
    "strcmp"
    "strcpy"
    "strcat"


Grammar

    0 $accept: program $end

    1 program: func-def

    2 func-def: "def" header ":" rule1 rule2 "end"

    3 rule1: func-def rule1
    4      | func-decl rule1
    5      | var-def rule1
    6      | %empty

    7 rule2: stmt
    8      | stmt rule2

    9 header: type T_ID "(" formal rule3 ")"
   10       | type T_ID "(" ")"
   11       | T_ID "(" formal rule3 ")"
   12       | T_ID "(" ")"

   13 rule3: ";" formal rule3
   14      | %empty

   15 formal: "ref" type T_ID rule4
   16       | type T_ID rule4

   17 rule4: "," T_ID rule4
   18      | %empty

   19 type: "int"
   20     | "bool"
   21     | "char"
   22     | type "[" "]"
   23     | "list" "[" type "]"

   24 func-decl: "decl" header

   25 var-def: type T_ID rule4

   26 stmt: simple
   27     | "exit"
   28     | "return" expr
   29     | "if" expr ":" rule2 "end"
   30     | "if" expr ":" rule2 rule5 "else" ":" rule2 "end"
   31     | "for" simplelist ";" expr ";" simplelist ":" rule2 "end"

   32 rule5: "elsif" expr ":" rule2 rule5
   33      | %empty

   34 simple: "skip"
   35       | atom ":=" expr
   36       | call

   37 simplelist: simple rule6

   38 call: T_ID "(" expr rule7 ")"
   39     | T_ID "(" ")"

   40 rule6: "," simple rule6
   41      | %empty

   42 rule7: "," expr rule7
   43      | %empty

   44 atom: T_ID
   45     | T_STRING
   46     | atom "[" expr "]"
   47     | call

   48 expr: atom
   49     | T_CONST
   50     | T_CONCHAR
   51     | "(" expr ")"
   52     | '+' expr
   53     | '-' expr
   54     | expr '+' expr
   55     | expr '-' expr
   56     | expr '*' expr
   57     | expr '/' expr
   58     | expr T_MOD expr
   59     | expr '=' expr
   60     | expr "<>" expr
   61     | expr '<' expr
   62     | expr '>' expr
   63     | expr "<=" expr
   64     | expr ">=" expr
   65     | "true"
   66     | "false"
   67     | T_NOT expr
   68     | expr T_AND expr
   69     | expr T_OR expr
   70     | "new" type "[" expr "]"
   71     | "nil"
   72     | "nil?" "(" expr ")"
   73     | expr '#' expr
   74     | "head" "(" expr ")"
   75     | "tail" "(" expr ")"


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 73
    '*' (42) 56
    '+' (43) 52 54
    '-' (45) 53 55
    '/' (47) 57
    '<' (60) 61
    '=' (61) 59
    '>' (62) 62
    error (256)
    T_AND (258) 68
    T_OR (259) 69
    T_NOT (260) 67
    T_MOD (261) 58
    "bool" (262) 20
    "char" (263) 21
    "int" (264) 19
    "list" (265) 23
    "new" (266) 70
    "nil" (267) 71
    "nil?" (268) 72
    "tail" (269) 75
    "head" (270) 74
    "decl" (271) 24
    "def" (272) 2
    "ref" (273) 15
    "return" (274) 28
    "for" (275) 31
    "exit" (276) 27
    "if" (277) 29 30
    "else" (278) 30
    "elsif" (279) 32
    "end" (280) 2 29 30 31
    "skip" (281) 34
    "true" (282) 65
    "false" (283) 66
    "puti" (284)
    "putb" (285)
    "putc" (286)
    "puts" (287)
    "geti" (288)
    "getb" (289)
    "getc" (290)
    "gets" (291)
    "abs" (292)
    "ord" (293)
    "chr" (294)
    "strlen" (295)
    "strcmp" (296)
    "strcpy" (297)
    "strcat" (298)
    T_ID (299) 9 10 11 12 15 16 17 25 38 39 44
    T_CONST (300) 49
    T_STRING (301) 45
    T_CONCHAR (302) 50
    "<>" (303) 60
    "<=" (304) 63
    ">=" (305) 64
    ":=" (306) 35
    "(" (307) 9 10 11 12 38 39 51 72 74 75
    ")" (308) 9 10 11 12 38 39 51 72 74 75
    "[" (309) 22 23 46 70
    "]" (310) 22 23 46 70
    "," (311) 17 40 42
    ":" (312) 2 29 30 31 32
    ";" (313) 13 31


Nonterminals, with rules where they appear

    $accept (67)
        on left: 0
    program (68)
        on left: 1
        on right: 0
    func-def (69)
        on left: 2
        on right: 1 3
    rule1 (70)
        on left: 3 4 5 6
        on right: 2 3 4 5
    rule2 (71)
        on left: 7 8
        on right: 2 8 29 30 31 32
    header (72)
        on left: 9 10 11 12
        on right: 2 24
    rule3 (73)
        on left: 13 14
        on right: 9 11 13
    formal (74)
        on left: 15 16
        on right: 9 11 13
    rule4 (75)
        on left: 17 18
        on right: 15 16 17 25
    type (76)
        on left: 19 20 21 22 23
        on right: 9 10 15 16 22 23 25 70
    func-decl (77)
        on left: 24
        on right: 4
    var-def (78)
        on left: 25
        on right: 5
    stmt (79)
        on left: 26 27 28 29 30 31
        on right: 7 8
    rule5 (80)
        on left: 32 33
        on right: 30 32
    simple (81)
        on left: 34 35 36
        on right: 26 37 40
    simplelist (82)
        on left: 37
        on right: 31
    call (83)
        on left: 38 39
        on right: 36 47
    rule6 (84)
        on left: 40 41
        on right: 37 40
    rule7 (85)
        on left: 42 43
        on right: 38 42
    atom (86)
        on left: 44 45 46 47
        on right: 35 46 48
    expr (87)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 28 29 30 31 32 35 38 42 46 51 52 53 54 55 56 57 58 59 60 61 62 63 64 67 68 69 70 72 73 74 75


State 0

    0 $accept: . program $end

    "def"  shift, and go to state 1

    program   go to state 2
    func-def  go to state 3


State 1

    2 func-def: "def" . header ":" rule1 rule2 "end"

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    T_ID    shift, and go to state 8

    header  go to state 9
    type    go to state 10


State 2

    0 $accept: program . $end

    $end  shift, and go to state 11


State 3

    1 program: func-def .

    $default  reduce using rule 1 (program)


State 4

   20 type: "bool" .

    $default  reduce using rule 20 (type)


State 5

   21 type: "char" .

    $default  reduce using rule 21 (type)


State 6

   19 type: "int" .

    $default  reduce using rule 19 (type)


State 7

   23 type: "list" . "[" type "]"

    "["  shift, and go to state 12


State 8

   11 header: T_ID . "(" formal rule3 ")"
   12       | T_ID . "(" ")"

    "("  shift, and go to state 13


State 9

    2 func-def: "def" header . ":" rule1 rule2 "end"

    ":"  shift, and go to state 14


State 10

    9 header: type . T_ID "(" formal rule3 ")"
   10       | type . T_ID "(" ")"
   22 type: type . "[" "]"

    T_ID  shift, and go to state 15
    "["   shift, and go to state 16


State 11

    0 $accept: program $end .

    $default  accept


State 12

   23 type: "list" "[" . type "]"

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7

    type  go to state 17


State 13

   11 header: T_ID "(" . formal rule3 ")"
   12       | T_ID "(" . ")"

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    "ref"   shift, and go to state 18
    ")"     shift, and go to state 19

    formal  go to state 20
    type    go to state 21


State 14

    2 func-def: "def" header ":" . rule1 rule2 "end"

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    "decl"  shift, and go to state 22
    "def"   shift, and go to state 1

    $default  reduce using rule 6 (rule1)

    func-def   go to state 23
    rule1      go to state 24
    type       go to state 25
    func-decl  go to state 26
    var-def    go to state 27


State 15

    9 header: type T_ID . "(" formal rule3 ")"
   10       | type T_ID . "(" ")"

    "("  shift, and go to state 28


State 16

   22 type: type "[" . "]"

    "]"  shift, and go to state 29


State 17

   22 type: type . "[" "]"
   23     | "list" "[" type . "]"

    "["  shift, and go to state 16
    "]"  shift, and go to state 30


State 18

   15 formal: "ref" . type T_ID rule4

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7

    type  go to state 31


State 19

   12 header: T_ID "(" ")" .

    $default  reduce using rule 12 (header)


State 20

   11 header: T_ID "(" formal . rule3 ")"

    ";"  shift, and go to state 32

    $default  reduce using rule 14 (rule3)

    rule3  go to state 33


State 21

   16 formal: type . T_ID rule4
   22 type: type . "[" "]"

    T_ID  shift, and go to state 34
    "["   shift, and go to state 16


State 22

   24 func-decl: "decl" . header

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    T_ID    shift, and go to state 8

    header  go to state 35
    type    go to state 10


State 23

    3 rule1: func-def . rule1

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    "decl"  shift, and go to state 22
    "def"   shift, and go to state 1

    $default  reduce using rule 6 (rule1)

    func-def   go to state 23
    rule1      go to state 36
    type       go to state 25
    func-decl  go to state 26
    var-def    go to state 27


State 24

    2 func-def: "def" header ":" rule1 . rule2 "end"

    "return"  shift, and go to state 37
    "for"     shift, and go to state 38
    "exit"    shift, and go to state 39
    "if"      shift, and go to state 40
    "skip"    shift, and go to state 41
    T_ID      shift, and go to state 42
    T_STRING  shift, and go to state 43

    rule2   go to state 44
    stmt    go to state 45
    simple  go to state 46
    call    go to state 47
    atom    go to state 48


State 25

   22 type: type . "[" "]"
   25 var-def: type . T_ID rule4

    T_ID  shift, and go to state 49
    "["   shift, and go to state 16


State 26

    4 rule1: func-decl . rule1

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    "decl"  shift, and go to state 22
    "def"   shift, and go to state 1

    $default  reduce using rule 6 (rule1)

    func-def   go to state 23
    rule1      go to state 50
    type       go to state 25
    func-decl  go to state 26
    var-def    go to state 27


State 27

    5 rule1: var-def . rule1

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    "decl"  shift, and go to state 22
    "def"   shift, and go to state 1

    $default  reduce using rule 6 (rule1)

    func-def   go to state 23
    rule1      go to state 51
    type       go to state 25
    func-decl  go to state 26
    var-def    go to state 27


State 28

    9 header: type T_ID "(" . formal rule3 ")"
   10       | type T_ID "(" . ")"

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    "ref"   shift, and go to state 18
    ")"     shift, and go to state 52

    formal  go to state 53
    type    go to state 21


State 29

   22 type: type "[" "]" .

    $default  reduce using rule 22 (type)


State 30

   23 type: "list" "[" type "]" .

    $default  reduce using rule 23 (type)


State 31

   15 formal: "ref" type . T_ID rule4
   22 type: type . "[" "]"

    T_ID  shift, and go to state 54
    "["   shift, and go to state 16


State 32

   13 rule3: ";" . formal rule3

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7
    "ref"   shift, and go to state 18

    formal  go to state 55
    type    go to state 21


State 33

   11 header: T_ID "(" formal rule3 . ")"

    ")"  shift, and go to state 56


State 34

   16 formal: type T_ID . rule4

    ","  shift, and go to state 57

    $default  reduce using rule 18 (rule4)

    rule4  go to state 58


State 35

   24 func-decl: "decl" header .

    $default  reduce using rule 24 (func-decl)


State 36

    3 rule1: func-def rule1 .

    $default  reduce using rule 3 (rule1)


State 37

   28 stmt: "return" . expr

    T_NOT      shift, and go to state 59
    "new"      shift, and go to state 60
    "nil"      shift, and go to state 61
    "nil?"     shift, and go to state 62
    "tail"     shift, and go to state 63
    "head"     shift, and go to state 64
    "true"     shift, and go to state 65
    "false"    shift, and go to state 66
    T_ID       shift, and go to state 42
    T_CONST    shift, and go to state 67
    T_STRING   shift, and go to state 43
    T_CONCHAR  shift, and go to state 68
    "("        shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71

    call  go to state 72
    atom  go to state 73
    expr  go to state 74


State 38

   31 stmt: "for" . simplelist ";" expr ";" simplelist ":" rule2 "end"

    "skip"    shift, and go to state 41
    T_ID      shift, and go to state 42
    T_STRING  shift, and go to state 43

    simple      go to state 75
    simplelist  go to state 76
    call        go to state 47
    atom        go to state 48


State 39

   27 stmt: "exit" .

    $default  reduce using rule 27 (stmt)


State 40

   29 stmt: "if" . expr ":" rule2 "end"
   30     | "if" . expr ":" rule2 rule5 "else" ":" rule2 "end"

    T_NOT      shift, and go to state 59
    "new"      shift, and go to state 60
    "nil"      shift, and go to state 61
    "nil?"     shift, and go to state 62
    "tail"     shift, and go to state 63
    "head"     shift, and go to state 64
    "true"     shift, and go to state 65
    "false"    shift, and go to state 66
    T_ID       shift, and go to state 42
    T_CONST    shift, and go to state 67
    T_STRING   shift, and go to state 43
    T_CONCHAR  shift, and go to state 68
    "("        shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71

    call  go to state 72
    atom  go to state 73
    expr  go to state 77


State 41

   34 simple: "skip" .

    $default  reduce using rule 34 (simple)


State 42

   38 call: T_ID . "(" expr rule7 ")"
   39     | T_ID . "(" ")"
   44 atom: T_ID .

    "("  shift, and go to state 78

    $default  reduce using rule 44 (atom)


State 43

   45 atom: T_STRING .

    $default  reduce using rule 45 (atom)


State 44

    2 func-def: "def" header ":" rule1 rule2 . "end"

    "end"  shift, and go to state 79


State 45

    7 rule2: stmt .
    8      | stmt . rule2

    "return"  shift, and go to state 37
    "for"     shift, and go to state 38
    "exit"    shift, and go to state 39
    "if"      shift, and go to state 40
    "skip"    shift, and go to state 41
    T_ID      shift, and go to state 42
    T_STRING  shift, and go to state 43

    $default  reduce using rule 7 (rule2)

    rule2   go to state 80
    stmt    go to state 45
    simple  go to state 46
    call    go to state 47
    atom    go to state 48


State 46

   26 stmt: simple .

    $default  reduce using rule 26 (stmt)


State 47

   36 simple: call .
   47 atom: call .

    ":="      reduce using rule 47 (atom)
    "["       reduce using rule 47 (atom)
    $default  reduce using rule 36 (simple)


State 48

   35 simple: atom . ":=" expr
   46 atom: atom . "[" expr "]"

    ":="  shift, and go to state 81
    "["   shift, and go to state 82


State 49

   25 var-def: type T_ID . rule4

    ","  shift, and go to state 57

    $default  reduce using rule 18 (rule4)

    rule4  go to state 83


State 50

    4 rule1: func-decl rule1 .

    $default  reduce using rule 4 (rule1)


State 51

    5 rule1: var-def rule1 .

    $default  reduce using rule 5 (rule1)


State 52

   10 header: type T_ID "(" ")" .

    $default  reduce using rule 10 (header)


State 53

    9 header: type T_ID "(" formal . rule3 ")"

    ";"  shift, and go to state 32

    $default  reduce using rule 14 (rule3)

    rule3  go to state 84


State 54

   15 formal: "ref" type T_ID . rule4

    ","  shift, and go to state 57

    $default  reduce using rule 18 (rule4)

    rule4  go to state 85


State 55

   13 rule3: ";" formal . rule3

    ";"  shift, and go to state 32

    $default  reduce using rule 14 (rule3)

    rule3  go to state 86


State 56

   11 header: T_ID "(" formal rule3 ")" .

    $default  reduce using rule 11 (header)


State 57

   17 rule4: "," . T_ID rule4

    T_ID  shift, and go to state 87


State 58

   16 formal: type T_ID rule4 .

    $default  reduce using rule 16 (formal)


State 59

   67 expr: T_NOT . expr

    T_NOT      shift, and go to state 59
    "new"      shift, and go to state 60
    "nil"      shift, and go to state 61
    "nil?"     shift, and go to state 62
    "tail"     shift, and go to state 63
    "head"     shift, and go to state 64
    "true"     shift, and go to state 65
    "false"    shift, and go to state 66
    T_ID       shift, and go to state 42
    T_CONST    shift, and go to state 67
    T_STRING   shift, and go to state 43
    T_CONCHAR  shift, and go to state 68
    "("        shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71

    call  go to state 72
    atom  go to state 73
    expr  go to state 88


State 60

   70 expr: "new" . type "[" expr "]"

    "bool"  shift, and go to state 4
    "char"  shift, and go to state 5
    "int"   shift, and go to state 6
    "list"  shift, and go to state 7

    type  go to state 89


State 61

   71 expr: "nil" .

    $default  reduce using rule 71 (expr)


State 62

   72 expr: "nil?" . "(" expr ")"

    "("  shift, and go to state 90


State 63

   75 expr: "tail" . "(" expr ")"

    "("  shift, and go to state 91


State 64

   74 expr: "head" . "(" expr ")"

    "("  shift, and go to state 92


State 65

   65 expr: "true" .

    $default  reduce using rule 65 (expr)


State 66

   66 expr: "false" .

    $default  reduce using rule 66 (expr)


State 67

   49 expr: T_CONST .

    $default  reduce using rule 49 (expr)


State 68

   50 expr: T_CONCHAR .

    $default  reduce using rule 50 (expr)


State 69

   51 expr: "(" . expr ")"

    T_NOT      shift, and go to state 59
    "new"      shift, and go to state 60
    "nil"      shift, and go to state 61
    "nil?"     shift, and go to state 62
    "tail"     shift, and go to state 63
    "head"     shift, and go to state 64
    "true"     shift, and go to state 65
    "false"    shift, and go to state 66
    T_ID       shift, and go to state 42
    T_CONST    shift, and go to state 67
    T_STRING   shift, and go to state 43
    T_CONCHAR  shift, and go to state 68
    "("        shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71

    call  go to state 72
    atom  go to state 73
    expr  go to state 93


State 70

   52 expr: '+' . expr

    T_NOT      shift, and go to state 59
    "new"      shift, and go to state 60
    "nil"      shift, and go to state 61
    "nil?"     shift, and go to state 62
    "tail"     shift, and go to state 63
    "head"     shift, and go to state 64
    "true"     shift, and go to state 65
    "false"    shift, and go to state 66
    T_ID       shift, and go to state 42
    T_CONST    shift, and go to state 67
    T_STRING   shift, and go to state 43
    T_CONCHAR  shift, and go to state 68
    "("        shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71

    call  go to state 72
    atom  go to state 73
    expr  go to state 94


State 71

   53 expr: '-' . expr

    T_NOT      shift, and go to state 59
    "new"      shift, and go to state 60
    "nil"      shift, and go to state 61
    "nil?"     shift, and go to state 62
    "tail"     shift, and go to state 63
    "head"     shift, and go to state 64
    "true"     shift, and go to state 65
    "false"    shift, and go to state 66
    T_ID       shift, and go to state 42
    T_CONST    shift, and go to state 67
    T_STRING   shift, and go to state 43
    T_CONCHAR  shift, and go to state 68
    "("        shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71

    call  go to state 72
    atom  go to state 73
    expr  go to state 95


State 72

   47 atom: call .

    $default  reduce using rule 47 (atom)


State 73

   46 atom: atom . "[" expr "]"
   48 expr: atom .

    "["  shift, and go to state 82

    $default  reduce using rule 48 (expr)


State 74

   28 stmt: "return" expr .
   54 expr: expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   58     | expr . T_MOD expr
   59     | expr . '=' expr
   60     | expr . "<>" expr
   61     | expr . '<' expr
   62     | expr . '>' expr
   63     | expr . "<=" expr
   64     | expr . ">=" expr
   68     | expr . T_AND expr
   69     | expr . T_OR expr
   73     | expr . '#' expr

    T_AND  shift, and go to state 96
    T_OR   shift, and go to state 97
    T_MOD  shift, and go to state 98
    "<>"   shift, and go to state 99
    "<="   shift, and go to state 100
    ">="   shift, and go to state 101
    '='    shift, and go to state 102
    '>'    shift, and go to state 103
    '<'    shift, and go to state 104
    '#'    shift, and go to state 105
    '+'    shift, and go to state 106
    '-'    shift, and go to state 107
    '*'    shift, and go to state 108
    '/'    shift, and go to state 109

    $default  reduce using rule 28 (stmt)


State 75

   37 simplelist: simple . rule6

    ","  shift, and go to state 110

    $default  reduce using rule 41 (rule6)

    rule6  go to state 111


State 76

   31 stmt: "for" simplelist . ";" expr ";" simplelist ":" rule2 "end"

    ";"  shift, and go to state 112


State 77

   29 stmt: "if" expr . ":" rule2 "end"
   30     | "if" expr . ":" rule2 rule5 "else" ":" rule2 "end"
   54 expr: expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   58     | expr . T_MOD expr
   59     | expr . '=' expr
   60     | expr . "<>" expr
   61     | expr . '<' expr
   62     | expr . '>' expr
   63     | expr . "<=" expr
   64     | expr . ">=" expr
   68     | expr . T_AND expr
   69     | expr . T_OR expr
   73     | expr . '#' expr

    T_AND  shift, and go to state 96
    T_OR   shift, and go to state 97
    T_MOD  shift, and go to state 98
    "<>"   shift, and go to state 99
    "<="   shift, and go to state 100
    ">="   shift, and go to state 101
    ":"    shift, and go to state 113
    '='    shift, and go to state 102
    '>'    shift, and go to state 103
    '<'    shift, and go to state 104
    '#'    shift, and go to state 105
    '+'    shift, and go to state 106
    '-'    shift, and go to state 107
    '*'    shift, and go to state 108
    '/'    shift, and go to state 109


State 78

   38 call: T_ID "(" . expr rule7 ")"
   39     | T_ID "(" . ")"

    T_NOT      shift, and go to state 59
    "new"      shift, and go to state 60
    "nil"      shift, and go to state 61
    "nil?"     shift, and go to state 62
    "tail"     shift, and go to state 63
    "head"     shift, and go to state 64
    "true"     shift, and go to state 65
    "false"    shift, and go to state 66
    T_ID       shift, and go to state 42
    T_CONST    shift, and go to state 67
    T_STRING   shift, and go to state 43
    T_CONCHAR  shift, and go to state 68
    "("        shift, and go to state 69
    ")"        shift, and go to state 114
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71

    call  go to state 72
    atom  go to state 73
    expr  go to state 115


State 79

    2 func-def: "def" header ":" rule1 rule2 "end" .

    $default  reduce using rule 2 (func-def)


State 80

    8 rule2: stmt rule2 .

    $default  reduce using rule 8 (rule2)


State 81

   35 simple: atom ":=" . expr

    T_NOT      shift, and go to state 59
    "new"      shift, and go to state 60
    "nil"      shift, and go to state 61
    "nil?"     shift, and go to state 62
    "tail"     shift, and go to state 63
    "head"     shift, and go to state 64
    "true"     shift, and go to state 65
    "false"    shift, and go to state 66
    T_ID       shift, and go to state 42
    T_CONST    shift, and go to state 67
    T_STRING   shift, and go to state 43
    T_CONCHAR  shift, and go to state 68
    "("        shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71

    call  go to state 72
    atom  go to state 73
    expr  go to state 116


State 82

   46 atom: atom "[" . expr "]"

    T_NOT      shift, and go to state 59
    "new"      shift, and go to state 60
    "nil"      shift, and go to state 61
    "nil?"     shift, and go to state 62
    "tail"     shift, and go to state 63
    "head"     shift, and go to state 64
    "true"     shift, and go to state 65
    "false"    shift, and go to state 66
    T_ID       shift, and go to state 42
    T_CONST    shift, and go to state 67
    T_STRING   shift, and go to state 43
    T_CONCHAR  shift, and go to state 68
    "("        shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71

    call  go to state 72
    atom  go to state 73
    expr  go to state 117


State 83

   25 var-def: type T_ID rule4 .

    $default  reduce using rule 25 (var-def)


State 84

    9 header: type T_ID "(" formal rule3 . ")"

    ")"  shift, and go to state 118


State 85

   15 formal: "ref" type T_ID rule4 .

    $default  reduce using rule 15 (formal)


State 86

   13 rule3: ";" formal rule3 .

    $default  reduce using rule 13 (rule3)


State 87

   17 rule4: "," T_ID . rule4

    ","  shift, and go to state 57

    $default  reduce using rule 18 (rule4)

    rule4  go to state 119


State 88

   54 expr: expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   58     | expr . T_MOD expr
   59     | expr . '=' expr
   60     | expr . "<>" expr
   61     | expr . '<' expr
   62     | expr . '>' expr
   63     | expr . "<=" expr
   64     | expr . ">=" expr
   67     | T_NOT expr .
   68     | expr . T_AND expr
   69     | expr . T_OR expr
   73     | expr . '#' expr

    T_MOD  shift, and go to state 98
    "<>"   shift, and go to state 99
    "<="   shift, and go to state 100
    ">="   shift, and go to state 101
    '='    shift, and go to state 102
    '>'    shift, and go to state 103
    '<'    shift, and go to state 104
    '#'    shift, and go to state 105
    '+'    shift, and go to state 106
    '-'    shift, and go to state 107
    '*'    shift, and go to state 108
    '/'    shift, and go to state 109

    $default  reduce using rule 67 (expr)


State 89

   22 type: type . "[" "]"
   70 expr: "new" type . "[" expr "]"

    "["  shift, and go to state 120


State 90

   72 expr: "nil?" "(" . expr ")"

    T_NOT      shift, and go to state 59
    "new"      shift, and go to state 60
    "nil"      shift, and go to state 61
    "nil?"     shift, and go to state 62
    "tail"     shift, and go to state 63
    "head"     shift, and go to state 64
    "true"     shift, and go to state 65
    "false"    shift, and go to state 66
    T_ID       shift, and go to state 42
    T_CONST    shift, and go to state 67
    T_STRING   shift, and go to state 43
    T_CONCHAR  shift, and go to state 68
    "("        shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71

    call  go to state 72
    atom  go to state 73
    expr  go to state 121


State 91

   75 expr: "tail" "(" . expr ")"

    T_NOT      shift, and go to state 59
    "new"      shift, and go to state 60
    "nil"      shift, and go to state 61
    "nil?"     shift, and go to state 62
    "tail"     shift, and go to state 63
    "head"     shift, and go to state 64
    "true"     shift, and go to state 65
    "false"    shift, and go to state 66
    T_ID       shift, and go to state 42
    T_CONST    shift, and go to state 67
    T_STRING   shift, and go to state 43
    T_CONCHAR  shift, and go to state 68
    "("        shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71

    call  go to state 72
    atom  go to state 73
    expr  go to state 122


State 92

   74 expr: "head" "(" . expr ")"

    T_NOT      shift, and go to state 59
    "new"      shift, and go to state 60
    "nil"      shift, and go to state 61
    "nil?"     shift, and go to state 62
    "tail"     shift, and go to state 63
    "head"     shift, and go to state 64
    "true"     shift, and go to state 65
    "false"    shift, and go to state 66
    T_ID       shift, and go to state 42
    T_CONST    shift, and go to state 67
    T_STRING   shift, and go to state 43
    T_CONCHAR  shift, and go to state 68
    "("        shift, and go to state 69
    '+'        shift, and go to state 70
    '-'        shift, and go to state 71

    call  go to state 72
    atom  go to state 73
    expr  go to state 123


State 93

   51 expr: "(" expr . ")"
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   58     | expr . T_MOD expr
   59     | expr . '=' expr
   60     | expr . "<>" expr
   61     | expr . '<' expr
   62     | expr . '>' expr
   63     | expr . "<=" expr
   64     | expr . ">=" expr
   68     | expr . T_AND expr
   69     | expr . T_OR expr
   73     | expr . '#' expr

    T_AND  shift, and go to state 96
    T_OR   shift, and go to state 97
    T_MOD  shift, and go to state 98
    "<>"   shift, and go to state 99
    "<="   shift, and go to state 100
    ">="   shift, and go to state 101
    ")"    shift, and go to state 124
    '='    shift, and go to state 102
    '>'    shift, and go to state 103
    '<'    shift, and go to state 104
    '#'    shift, and go to state 105
    '+'    shift, and go to state 106
    '-'    shift, and go to state 107
    '*'    shift, and go to state 108
    '/'    shift, and go to state 109


State 94
